[tool.poetry]
name = "linkedin-api-python3-examples"
version = "0.1.0"
description = "Project with sample python scripts to invoke Linkedin API"
authors = ["Steven Goh"]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.25.1"
"manage.py" = "^0.2.10"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
